upd desc and rm

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 # mpspline2
 
-This package is a space to re-work `GSIF::mpspline()`, because the doco says it needs tidying up.
+This package is a space to re-work [`GSIF::mpspline()`](https://r-forge.r-project.org/scm/viewvc.php/pkg/R/mpspline.R?view=markup&revision=240&root=gsif), because the doco says it needs tidying up.
 
 This is only set up as a package so I could use `testthat` and `roxygen2` easily. Also I don't understand SCM repositories, and don't really want to >.>
 
