--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 
 [![Travis build status](https://travis-ci.com/obrl-soil/mpspline2.svg?branch=master)](https://travis-ci.com/obrl-soil/mpspline2)
 [![Coverage status](https://codecov.io/gh/obrl-soil/mpspline2/branch/master/graph/badge.svg)](https://codecov.io/github/obrl-soil/mpspline2?branch=master)
+[![CRAN](https://www.r-pkg.org/badges/version/mpspline2)](https://cran.r-project.org/package=mpspline2)
+[![Downloads](https://cranlogs.r-pkg.org/badges/grand-total/mpspline2)](https://www.r-pkg.org/pkg/mpspline2)
 
 # mpspline2
 
@@ -22,7 +24,17 @@ This package is a standalone re-implementation of  [`GSIF::mpspline()`](https://
 
 ## Installation
 
-`devtools::install_github('obrl-soil/mpspline2')`
+Install from CRAN with
+
+```{r 'installation', eval = FALSE}
+install.packages('mpspline2')
+```
+
+Install from github with
+
+```{r 'installation_dev', eval = FALSE}
+devtools::install_github("obrl-soil/mpspline2")
+```
 
 ## Example
 
@@ -34,8 +46,8 @@ dat <- data.frame("SID" = c( 1,  1,  1,  1),
                   "VAL" = c( 6,  4,  3, 10),
                    stringsAsFactors = FALSE)
 dat
-mpspline_tidy(obj = dat, var_name = 'VAL')$est_dcm
-
+spl_dat <- mpspline_tidy(obj = dat, var_name = 'VAL')
+spl_dat$est_dcm
 ```
 
 ### Asking for help
