--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ install.packages('mpspline2')
 Install from github with
 
 ```{r 'installation_dev', eval = FALSE}
-devtools::install_github("obrl-soil/mpspline2")
+remotes::install_github("obrl-soil/mpspline2")
 ```
 
 ## Example
@@ -52,6 +52,7 @@ spl_dat$est_dcm
 
 ### Asking for help
 
-If you get stuck using this package, please post a question on [Stack Overflow](https://stackoverflow.com/). This means that others can benefit from the discussion, and more people are available to help you. You're welcome to ping me in a comment or on twitter (@obrl_soil) to get my attention.
+If you get stuck using this package, please post a question on [Stack Overflow](https://stackoverflow.com/). This means that others can benefit from the discussion, and more people are available to help you. You're welcome to ping me on Bluesky (@obrlsoil) or Mastodon (@obrl_soil) to get my attention.
+
 
 ***
